<resources>
    <string name="app_name">ageversary</string>
    <string name="app_name_caps">AgeVersary</string>
    <string name="percent">%</string>
    <string name="no_name">No name</string>
    <string name="default_age"><b>00</b>y <b>00</b>m <b>00</b>d</string>
    <string name="year_progress_label">year</string>
    <string name="choose_birth_date">Choose your birth date</string>
    <string name="years_age_key">years_age</string>
    <string name="months_age_key">months_age</string>
    <string name="user_age_key">user_age</string>
    <string name="facebook_app_id">934823246677416</string>
    <string name="fb_login_protocol_scheme">fb934823246677416</string>
    <string name="app_logo_string">app logo</string>
    <string name="age_holder"><b>%1$d</b>y <b>%2$d</b>m <b>%3$d</b>d</string>
    <string name="percent_holder">%1$d%%</string>
    <string name="next_at">NEXT</string>
    <string name="days">days</string>
    <string name="anniv">ANNIV</string>
    <string name="app_header_horizontal_line">app header horizontal line</string>
    <string name="background_for_year_progress">background for year progress</string>
    <string name="background_for_share_button">background for share button</string>
    <string name="user_profile_photo">user profile photo</string>
    <string name="currently">current</string>
    <string name="hours">hours</string>
    <string name="anniversary_icon">Anniversary icon</string>
    <string name="next_anniversary_date_icon">next anniversary date icon</string>
    <string name="current_dimension_icon">current dimension icon</string>
    <string name="mins">mins</string>
    <string name="celebrate_life">celebrate life</string>
    <string name="more_settings_menu_item">more settings menu item</string>
    <string name="logout">Logout</string>
    <string name="profile">My Profile</string>
    <string name="friends">Friends</string>
    <string name="dropdown_arrow">Dropdown arrow</string>
    <string name="settings">Settings</string>
    <string name="set">Set</string>
    <string name="cancel">Cancel</string>
</resources>
